chore: update to java 21